[gd_scene load_steps=17 format=3 uid="uid://0hra43oryyg4"]

[ext_resource type="Script" uid="uid://co0lj5ym7i2yf" path="res://scripts/items/dash.gd" id="1_qc7mc"]
[ext_resource type="Shader" uid="uid://cjhdxgx78hiya" path="res://shaders/dash_ghost.gdshader" id="2_coaln"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xidau"]
shader = ExtResource("2_coaln")

[sub_resource type="Curve" id="Curve_ue7mj"]
_data = [Vector2(0, 1), 0.0, -2.93837, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_jlvt4"]
curve = SubResource("Curve_ue7mj")

[sub_resource type="Curve" id="Curve_sldiq"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -3.51171, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_qqjxf"]
curve = SubResource("Curve_sldiq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nma62"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
scale_min = 20.0
scale_max = 20.0
scale_curve = SubResource("CurveTexture_qqjxf")
alpha_curve = SubResource("CurveTexture_jlvt4")

[sub_resource type="Curve" id="Curve_0ortg"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_cmitb"]
curve = SubResource("Curve_0ortg")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_57yko"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(0, 10, 0)
angle_min = 45.0
angle_max = 45.0
direction = Vector3(-1, 0, 0)
spread = 10.0
initial_velocity_min = 10.0
initial_velocity_max = 40.0
gravity = Vector3(0, 0, 0)
damping_min = 5.0
damping_max = 15.0
scale_max = 3.0
alpha_curve = SubResource("CurveTexture_cmitb")

[sub_resource type="Curve" id="Curve_rhuvg"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_t7qaw"]
curve = SubResource("Curve_rhuvg")

[sub_resource type="Curve" id="Curve_gw3vb"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.14286, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_heyqt"]
curve = SubResource("Curve_gw3vb")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_k5jgj"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 5.0
emission_ring_inner_radius = 3.0
emission_ring_cone_angle = 90.0
angle_min = 45.0
angle_max = 45.0
radial_velocity_min = 30.0
radial_velocity_max = 70.0
radial_velocity_curve = SubResource("CurveTexture_heyqt")
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 1.25
alpha_curve = SubResource("CurveTexture_t7qaw")

[node name="Dash" type="Node2D"]
script = ExtResource("1_qc7mc")

[node name="Afterimage" type="GPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_xidau")
emitting = false
amount = 30
lifetime = 0.5
process_material = SubResource("ParticleProcessMaterial_nma62")

[node name="Dashline" type="GPUParticles2D" parent="."]
emitting = false
amount = 128
process_material = SubResource("ParticleProcessMaterial_57yko")

[node name="Duration" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="Restore" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_k5jgj")

[node name="DashArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8
monitoring = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DashArea"]
position = Vector2(9.53674e-07, 9.53674e-07)
scale = Vector2(1.25, 1.25)
polygon = PackedVector2Array(0, -10, 10, 0, 0, 10, -10, 0)

[connection signal="timeout" from="Duration" to="." method="end_dash"]
[connection signal="timeout" from="Cooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="body_entered" from="DashArea" to="." method="_on_dash_area_body_entered"]
